[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "solutions"

[[bin]]
name = "aoc2023"
path = "src/bin.rs"

[dependencies]
regex = "1.10.2"
rudolf-rs = { path = "../rudolf-rs" } 

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "aoc"
harness = false

